fix: update applied filter button styling for improved readability

--- a/styles.css
+++ b/styles.css
@@ -925,5 +925,5 @@ yield-search-pagination {
 }
 
 .products-page .applied-filter > .remove-filter {
-  @apply font-bolder;
+  @apply font-bolder text-lg;
 }
